--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather-App</title>
     <link rel="stylesheet" href="style.css" class="css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Material+Symbols+Outlined">
+<!--     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Material+Symbols+Outlined"> -->
     <script src="script.js" defer></script>
 </head>
 
